--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "express": "^4.18.2",
     "express-session": "^1.17.1",
     "http-errors": "^1.6.3",
-    "jade": "~1.11.0",
-    "jsonwebtoken": "^8.5.1",
+    "jade": "^0.29.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.9.18",
     "mongoose-currency": "^0.2.0",
     "morgan": "~1.9.0",
-    "passport": "^0.4.1",
+    "passport": "^0.6.0",
     "passport-facebook-token": "^4.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "session-file-store": "^1.4.0"
+  },
+  "resolutions": {
+    "uglify-js": "3.17.4"
   }
 }
